Fix: portfolio section not centered on mobile

--- a/src/components/portfolio/Portfolio.module.css
+++ b/src/components/portfolio/Portfolio.module.css
@@ -44,7 +44,7 @@
   border-radius: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 360px) {
   .project button {
     /* padding: 0.3rem 0.6rem;
     border-radius: 0; */
@@ -52,10 +52,17 @@
   }
 
   .project {
-    padding: 0.8rem;
+    padding: 0.5rem;
   }
 
   .portfolio__container {
     grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .portfolio__container {
+    margin: 4rem 1rem;
+    max-width: max-content;
   }
 }
